- added some more debug infos in dxr3outputthread.c
- added const keyword in dxr3configdata.h
- added EM8300 include define in Makefile
- added debuglevels, so we can define how much we want to log
- assimilated spudecoder from vdr's dvbspu.c/h -> nice nav in dvds
- kicked out cDxr3InterfaceSpu from dxr3interface.c/h
- a little fix for cDxr3Interface::ResampleVolume
- kicked out dxr3interface_spu.c/h and dxr3interface_spu_list.c/h, because
  the new spudecoder dont need it anymore.
- added dxr3cpu.c/h to get some infos about the cpu
- added dxr3memcpy.c/h to get a little speedup - i hope
- maybe a little audiofix: lastHeader in cDxr3AudioDecoder will now set to 0
  with the constr. and not via Init()-function. So there should be now some lesser
  audio scratches.
- osd works now on every resolution (viva, viva plus,...)
- added main-menu-entry
- added in some parts some memory allocation tests
- added fix for Makefile from vdr-portal.de -> should compile on more machines :)
- added Tools::WriteInfoToOsd(...) - now some infos like "Releasing devices" are show
  now on the osd again
- fixed dxr3osd_subpicutre.c - thanks to Paavo Hartikainen <pahartik@sci.fi>


2005-0?-??: Version 0.2.3-pre3

- fixed output of anamorphic video, if tv aspect is configured to 16:9 in DVB setup menu 
  thanks Seppo Ingalsuo <seppo.ingalsuo@iki.fi>
- rewrote i18n support, improved Finnish translation and other bits
- fixed void cDxr3Interface::SetAudioDigitalPCM() - thanks to Stephan Skrodzki <skrodzki@contcast.de> for patch
- dxr3memcpy.c/h: fix to support older compilers like gcc-2.95
- dxr3memcpy.c/h: should now compile on alpha and powerpc
- added support for VDR 1.3.13 and later - thanks to Luca Olivetti and others
- removed -lz from makefile
- compiles now with 3.4.x gcc's
- use $CXX for generating dependencies instead of hardcoded g++
- added descriptions to audio and video output threads
- fixed audio and video thread deletion in demux device destructor