@@ -244,3 +244,4 @@ NOTE: I havent found time to include all of the languages, will be done in pre2
 - use $CXX for generating dependencies instead of hardcoded g++
 - added descriptions to audio and video output threads
 - fixed audio and video thread deletion in demux device destructor
+- made "all" the default target in Makefile
